Add basic functionality to grab HTML

--- a/plugin/mark.html
+++ b/plugin/mark.html
@@ -5,12 +5,17 @@
     <link href="mark.css" rel="stylesheet">
   </head>
   <body>
+    <div id="action-container">
+      <button id="action-get-html">Get html</button>
+    </div>
     <h2>Mark</h2>
     <label for="m-selector">Selector</label>
+    <br />
     <input type="text" id="m-selector" class="m-input" />
     <br />
-    <label for="m-content">HTML Content</label>
-    <textarea id="m-content" class="m-input">Test</textarea>
+    <br />
+    <label for="m-html">HTML</label>
+    <textarea id="m-html" class="m-input"></textarea>
 
     <script src="markBrowserAction.js"></script>
   </body>
