Enable functionality to replace DOM elements based on a selector

--- a/plugin/mark.html
+++ b/plugin/mark.html
@@ -7,6 +7,7 @@
   <body>
     <div id="action-container">
       <button id="action-get-html">Get html</button>
+      <button id="action-set-html">Set html</button>
     </div>
     <h2>Mark</h2>
     <label for="m-selector">Selector</label>
