Add ability to beautify the html

--- a/plugin/mark.html
+++ b/plugin/mark.html
@@ -17,7 +17,9 @@
     <br />
     <label for="m-html">HTML</label>
     <textarea id="m-html" class="m-input"></textarea>
+    <button id="action-beautify-html">Beautify html</button>
 
+    <script src="vendor/beautify-html.min.js"></script>
     <script src="markBrowserAction.js"></script>
   </body>
 </html>
